--- a/about.html
+++ b/about.html
@@ -6,70 +6,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <!-- Bootstrap CSS -->
-  
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-        }
+  <!-- Bootstrap CSS -->
 
-        .about-header {
-            background-color: #343a40;
-            color: white;
-            padding: 30px;
-            text-align: center;
-        }
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+    }
 
-        .about-section {
-            padding: 50px 20px;
-        }
+    .about-header {
+      background-color: #343a40;
+      color: white;
+      padding: 30px;
+      text-align: center;
+    }
 
-        .about-section h2 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
+    .about-section {
+      padding: 50px 20px;
+    }
 
-        .about-section p {
-            font-size: 1.2rem;
-            line-height: 1.6;
-        }
-        .footer {
-            background-color: #343a40;
-            color: white;
-            padding: 40px 0;
-        }
+    .about-section h2 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
 
-        .footer .footer-links a {
-            color: #adb5bd;
-            text-decoration: none;
-            margin-right: 20px;
-        }
+    .about-section p {
+      font-size: 1.2rem;
+      line-height: 1.6;
+    }
 
-        .footer .footer-links a:hover {
-            color: #f8f9fa;
-        }
+    .footer {
+      background-color: #343a40;
+      color: white;
+      padding: 40px 0;
+    }
 
-        .footer .social-icons a {
-            color: #adb5bd;
-            margin: 0 10px;
-            font-size: 1.5rem;
-        }
+    .footer .footer-links a {
+      color: #adb5bd;
+      text-decoration: none;
+      margin-right: 20px;
+    }
 
-        .footer .social-icons a:hover {
-            color: #f8f9fa;
-        }
+    .footer .footer-links a:hover {
+      color: #f8f9fa;
+    }
 
-        .footer .contact-info p {
-            margin: 5px 0;
-        }
-    </style>
+    .footer .social-icons a {
+      color: #adb5bd;
+      margin: 0 10px;
+      font-size: 1.5rem;
+    }
+
+    .footer .social-icons a:hover {
+      color: #f8f9fa;
+    }
+
+    .footer .contact-info p {
+      margin: 5px 0;
+    }
+  </style>
 </head>
 
 <body>
 
-    <!-- Navbar -->
-    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
+  <!-- Navbar -->
+  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
       <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
@@ -77,97 +78,97 @@
 
     </li>
     <li class="nav-item" role="presentation">
-      <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button"
-          role="tab" aria-selected="false">About</button></a>
+      <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button" role="tab"
+          aria-selected="false">About</button></a>
     </li>
     <li class="nav-item" role="presentation">
       <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button"
           role="tab" aria-selected="false">Contact</button></a>
 
     </li>
-  </ul>   
+  </ul>
 
-    <!-- About Section -->
-    <section class="about-header">
-        <div class="container">
-            <h1>About Us</h1>
-        </div>
-    </section>
+  <!-- About Section -->
+  <section class="about-header">
+    <div class="container">
+      <h1>About Us</h1>
+    </div>
+  </section>
 
-    <section class="about-section">
-        <div class="container">
-            <h2>Our Story</h2>
-            <p>
-                Welcome to MyWebsite! We are a company dedicated to providing high-quality services to our clients. Our
-                mission is to deliver exceptional results and build long-term relationships based on trust and integrity.
-            </p>
-            <p>
-                Our team consists of skilled professionals who are passionate about their work. We believe in innovation,
-                collaboration, and continuous learning to stay ahead in the ever-changing digital world.
-            </p>
-        </div>
-    </section>
+  <section class="about-section">
+    <div class="container">
+      <h2>Our Story</h2>
+      <p>
+        Welcome to MyWebsite! We are a company dedicated to providing high-quality services to our clients. Our
+        mission is to deliver exceptional results and build long-term relationships based on trust and integrity.
+      </p>
+      <p>
+        Our team consists of skilled professionals who are passionate about their work. We believe in innovation,
+        collaboration, and continuous learning to stay ahead in the ever-changing digital world.
+      </p>
+    </div>
+  </section>
 
-<!-- Footer -->
-    <!-- Footer Section -->
-    <footer class="footer">
-      <div class="container">
-          <div class="row">
-              <!-- Contact Info -->
-              <div class="col-md-3">
-                  <h5>Contact Us</h5>
-                  <div class="contact-info">
-                      <p><strong>Email:</strong> info@mywebsite.com</p>
-                      <p><strong>Phone:</strong> +1 234 567 890</p>
-                      <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
-                  </div>
-              </div>
-
-              <!-- Quick Links -->
-              <div class="col-md-3">
-                  <h5>Quick Links</h5>
-                  <div class="footer-links">
-                      <a href="#">Home</a>
-                      <a href="#">About</a>
-                      <a href="#">Services</a>
-                      <a href="#">Contact</a>
-                  </div>
-              </div>
-
-              <!-- Social Media -->
-              <div class="col-md-3">
-                  <h5>Follow Us</h5>
-                  <div class="social-icons">
-                      <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-                      <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-                      <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-                      <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
-                  </div>
-              </div>
-
-              <!-- Newsletter Signup -->
-              <div class="col-md-3">
-                  <h5>Newsletter</h5>
-                  <p>Sign up for our newsletter to get the latest updates.</p>
-                  <form action="#" method="post">
-                      <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
-                      <button type="submit" class="btn btn-light btn-block">Subscribe</button>
-                  </form>
-              </div>
+  <!-- Footer -->
+  <!-- Footer Section -->
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <!-- Contact Info -->
+        <div class="col-md-3">
+          <h5>Contact Us</h5>
+          <div class="contact-info">
+            <p><strong>Email:</strong> info@mywebsite.com</p>
+            <p><strong>Phone:</strong> +1 234 567 890</p>
+            <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
           </div>
+        </div>
 
-          <!-- Copyright -->
-          <div class="text-center mt-4">
-              <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+        <!-- Quick Links -->
+        <div class="col-md-3">
+          <h5>Quick Links</h5>
+          <div class="footer-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
           </div>
+        </div>
+
+        <!-- Social Media -->
+        <div class="col-md-3">
+          <h5>Follow Us</h5>
+          <div class="social-icons">
+            <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+
+        <!-- Newsletter Signup -->
+        <div class="col-md-3">
+          <h5>Newsletter</h5>
+          <p>Sign up for our newsletter to get the latest updates.</p>
+          <form action="#" method="post">
+            <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
+            <button type="submit" class="btn btn-light btn-block">Subscribe</button>
+          </form>
+        </div>
       </div>
+
+      <!-- Copyright -->
+      <div class="text-center mt-4">
+        <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+      </div>
+    </div>
   </footer>
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
