--- a/index.html
+++ b/index.html
@@ -11,82 +11,82 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <style>
-      body {
-          font-family: Arial, sans-serif;
-          background-color: #f8f9fa;
-      }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+    }
 
-      .hero-section {
-          background: url('img/Imgb') no-repeat center center;
-          background-size: cover;
-          color: white;
-          height: 100vh;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-      }
+    .hero-section {
+      background: url('img/Imgb') no-repeat center center;
+      background-size: cover;
+      color: white;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
 
-      .hero-section h1 {
-          font-size: 3.5rem;
-      }
+    .hero-section h1 {
+      font-size: 3.5rem;
+    }
 
-      .feature-section {
-            background-size: cover; 
-            background-position: center; 
-            color: white;
-            height: 100vh; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-          padding: 60px 0;
-          background-color:rgb(45 35 88);
-      }
+    .feature-section {
+      background-size: cover;
+      background-position: center;
+      color: white;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 60px 0;
+      background-color: rgb(45 35 88);
+    }
 
-      .feature-section h2 {
-          font-size: 2.5rem;
-          margin-bottom: 20px;
-          margin-top: 30px;
-          width: 100%; 
-            height: 200px;
-      }
+    .feature-section h2 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+      margin-top: 30px;
+      width: 100%;
+      height: 200px;
+    }
 
-      .feature-card {
-        background-color: rgb(68, 105, 183);
-          
-            object-fit: cover;
-      }
+    .feature-card {
+      background-color: rgb(68, 105, 183);
 
-      .footer {
-            background-color: #343a40;
-            color: white;
-            padding: 40px 0;
-        }
+      object-fit: cover;
+    }
 
-        .footer .footer-links a {
-            color: #adb5bd;
-            text-decoration: none;
-            margin-right: 20px;
-        }
+    .footer {
+      background-color: #343a40;
+      color: white;
+      padding: 40px 0;
+    }
 
-        .footer .footer-links a:hover {
-            color: #f8f9fa;
-        }
+    .footer .footer-links a {
+      color: #adb5bd;
+      text-decoration: none;
+      margin-right: 20px;
+    }
 
-        .footer .social-icons a {
-            color: #adb5bd;
-            margin: 0 10px;
-            font-size: 1.5rem;
-        }
+    .footer .footer-links a:hover {
+      color: #f8f9fa;
+    }
 
-        .footer .social-icons a:hover {
-            color: #f8f9fa;
-        }
+    .footer .social-icons a {
+      color: #adb5bd;
+      margin: 0 10px;
+      font-size: 1.5rem;
+    }
 
-        .footer .contact-info p {
-            margin: 5px 0;
-        }
+    .footer .social-icons a:hover {
+      color: #f8f9fa;
+    }
+
+    .footer .contact-info p {
+      margin: 5px 0;
+    }
   </style>
 </head>
 
@@ -99,8 +99,8 @@
 
     </li>
     <li class="nav-item" role="presentation">
-      <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button"
-          role="tab" aria-selected="false">About</button></a>
+      <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button" role="tab"
+          aria-selected="false">About</button></a>
     </li>
     <li class="nav-item" role="presentation">
       <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button"
@@ -111,108 +111,108 @@
   <!-- Hero Section -->
   <section style="background-image: ;" class="hero-section">
     <div>
-        <h1>Welcome to MyWebsite</h1>
-        <p>We deliver high-quality services with passion and professionalism.</p>
-        <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
+      <h1>Welcome to MyWebsite</h1>
+      <p>We deliver high-quality services with passion and professionalism.</p>
+      <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
     </div>
-</section>
+  </section>
 
-<!-- Features Section -->
-<section class="feature-section text-center">
+  <!-- Features Section -->
+  <section class="feature-section text-center">
     <div class="container">
-        <h2>What We Do</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card feature-card">
-                    <img src="img/web devp.jpeg" class="card-img-top" alt="Feature 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Web Development</h5>
-                        <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
-                    </div>
-                </div>
+      <h2>What We Do</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card feature-card">
+            <img src="img/web devp.jpeg" class="card-img-top" alt="Feature 1">
+            <div class="card-body">
+              <h5 class="card-title">Web Development</h5>
+              <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
             </div>
-            <div class="col-md-4">
-                <div class="card feature-card">
-                    <img src="img/Mob.jpeg" class="card-img-top" alt="Feature 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Mobile Development</h5>
-                        <p class="card-text">Building custom mobile applications for your business needs.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card feature-card">
-                    <img src="img/Digital.jpeg" class="card-img-top" alt="Feature 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Digital Marketing</h5>
-                        <p class="card-text">We help you reach your audience with effective marketing strategies.</p>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-    </div>
-</section>
-
-<!-- Footer -->
-    <!-- Footer Section -->
-    <footer class="footer">
-      <div class="container">
-          <div class="row">
-              <!-- Contact Info -->
-              <div class="col-md-3">
-                  <h5>Contact Us</h5>
-                  <div class="contact-info">
-                      <p><strong>Email:</strong> info@mywebsite.com</p>
-                      <p><strong>Phone:</strong> +1 234 567 890</p>
-                      <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
-                  </div>
-              </div>
-
-              <!-- Quick Links -->
-              <div class="col-md-3">
-                  <h5>Quick Links</h5>
-                  <div class="footer-links">
-                      <a href="#">Home</a>
-                      <a href="#">About</a>
-                      <a href="#">Services</a>
-                      <a href="#">Contact</a>
-                  </div>
-              </div>
-
-              <!-- Social Media -->
-              <div class="col-md-3">
-                  <h5>Follow Us</h5>
-                  <div class="social-icons">
-                      <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-                      <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-                      <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-                      <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
-                  </div>
-              </div>
-
-              <!-- Newsletter Signup -->
-              <div class="col-md-3">
-                  <h5>Newsletter</h5>
-                  <p>Sign up for our newsletter to get the latest updates.</p>
-                  <form action="#" method="post">
-                      <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
-                      <button type="submit" class="btn btn-light btn-block">Subscribe</button>
-                  </form>
-              </div>
+        <div class="col-md-4">
+          <div class="card feature-card">
+            <img src="img/Mob.jpeg" class="card-img-top" alt="Feature 2">
+            <div class="card-body">
+              <h5 class="card-title">Mobile Development</h5>
+              <p class="card-text">Building custom mobile applications for your business needs.</p>
+            </div>
           </div>
-
-          <!-- Copyright -->
-          <div class="text-center mt-4">
-              <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+        </div>
+        <div class="col-md-4">
+          <div class="card feature-card">
+            <img src="img/Digital.jpeg" class="card-img-top" alt="Feature 3">
+            <div class="card-body">
+              <h5 class="card-title">Digital Marketing</h5>
+              <p class="card-text">We help you reach your audience with effective marketing strategies.</p>
+            </div>
           </div>
+        </div>
       </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <!-- Footer Section -->
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <!-- Contact Info -->
+        <div class="col-md-3">
+          <h5>Contact Us</h5>
+          <div class="contact-info">
+            <p><strong>Email:</strong> info@mywebsite.com</p>
+            <p><strong>Phone:</strong> +1 234 567 890</p>
+            <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
+          </div>
+        </div>
+
+        <!-- Quick Links -->
+        <div class="col-md-3">
+          <h5>Quick Links</h5>
+          <div class="footer-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+
+        <!-- Social Media -->
+        <div class="col-md-3">
+          <h5>Follow Us</h5>
+          <div class="social-icons">
+            <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+
+        <!-- Newsletter Signup -->
+        <div class="col-md-3">
+          <h5>Newsletter</h5>
+          <p>Sign up for our newsletter to get the latest updates.</p>
+          <form action="#" method="post">
+            <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
+            <button type="submit" class="btn btn-light btn-block">Subscribe</button>
+          </form>
+        </div>
+      </div>
+
+      <!-- Copyright -->
+      <div class="text-center mt-4">
+        <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+      </div>
+    </div>
   </footer>
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
