--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - MyWebsite | Get in Touch with Our Team</title>
+
     <!-- SEO -->
     <meta name="title" content="Contact Me - My Website">
     <meta name="description"
@@ -14,7 +16,6 @@
     <meta property="og:description" content="Let's connect. Reach out for business or collaboration inquiries.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <title>Contact Me</title>
 
     <style>
         body {
