--- a/about.html
+++ b/about.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Learn more about MyWebsite, our team, values, mission, and how we deliver high-quality services to our clients.">
+  <meta name="description"
+    content="Learn more about MyWebsite, our team, values, mission, and how we deliver high-quality services to our clients.">
   <meta name="keywords" content="About Us, MyWebsite, company, team, services, quality, mission, values">
-  
-  <title>About Us</title>
-  <meta name="keywords" content="company, services, about us, MyWebsite">
+
+  <title>About Us - MyWebsite | Learn More About Our Team and Mission</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
