--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <!-- Basic Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MyWebsite | High-Quality Services and Solutions</title>
   <!-- SEO Essentials -->
   <meta name="title" content="My Web Site - Web & Mobile Solutions">
   <meta name="description" content="Professional web development, mobile apps, and digital marketing services.">
@@ -14,7 +15,6 @@
   <meta property="og:description" content="Professional web development, mobile apps, and digital marketing services.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  <title>My Web Site</title>
 
   <!-- Custom CSS -->
   <style>
