--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
+      color: white;
+      background-color: rgb(45 35 88);
     }
 
     .about-header {
-      background-color: #343a40;
       color: white;
       padding: 30px;
       text-align: center;
