--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: rgb(45 35 88);
         }
 
         * {
