--- a/blog.html
+++ b/blog.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO Essentials -->
     <title>Blog | MyWebsite</title>
-  <meta name="description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
+    <meta name="description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
 
     <!-- Custom CSS -->
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            background-color: rgb(45 35 88);
         }
 
         .blog-header {
@@ -86,7 +86,7 @@
         </li>
         <li class="nav-item" role="presentation">
             <a href="blog.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Blogs</a>
-          </li>
+        </li>
     </ul>
     <!-- Blogs -->
     <!-- Blog Header -->
@@ -103,7 +103,8 @@
             <!-- Blog Post 1 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/Web-Development.jpg" class="card-img-top" alt="Why Your Business Needs a Website">
+                    <img src="img/Blog/Web-Development.jpg" class="card-img-top"
+                        alt="Why Your Business Needs a Website">
                     <div class="card-body">
                         <h5 class="card-title">Why Your Business Needs a Website in 2025</h5>
                         <p class="card-text">Discover why a professional website is critical for credibility, SEO, and
